--- a/samples/bert_finetuning/annotator.ipynb
+++ b/samples/bert_finetuning/annotator.ipynb
@@ -40,34 +40,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting grammarflow==0.0.6\n",
-      "  Downloading GrammarFlow-0.0.6-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: grammarflow\n",
-      "  Attempting uninstall: grammarflow\n",
-      "    Found existing installation: GrammarFlow 0.0.5\n",
-      "    Uninstalling GrammarFlow-0.0.5:\n",
-      "      Successfully uninstalled GrammarFlow-0.0.5\n",
-      "Successfully installed grammarflow-0.0.6\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install grammarflow==0.0.7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
@@ -79,136 +51,8 @@
     "import openai\n",
     "import os\n",
     "from dotenv import load_dotenv, find_dotenv\n",
+    "\n",
     "load_dotenv(find_dotenv())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: openai\n",
-      "Version: 1.14.1\n",
-      "Summary: The official Python library for the openai API\n",
-      "Home-page: \n",
-      "Author: \n",
-      "Author-email: OpenAI <support@openai.com>\n",
-      "License: \n",
-      "Location: /home/aksha/.pyenv/versions/3.9.18/lib/python3.9/site-packages\n",
-      "Requires: anyio, distro, httpx, pydantic, sniffio, tqdm, typing-extensions\n",
-      "Required-by: langchain-openai\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip show openai"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: llama_cpp_python\n",
-      "Version: 0.2.50\n",
-      "Summary: Python bindings for the llama.cpp library\n",
-      "Home-page: \n",
-      "Author: \n",
-      "Author-email: Andrei Betlen <abetlen@gmail.com>\n",
-      "License: MIT\n",
-      "Location: /home/aksha/.pyenv/versions/3.9.18/lib/python3.9/site-packages\n",
-      "Requires: diskcache, jinja2, numpy, typing-extensions\n",
-      "Required-by: \n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip show llama-cpp-python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: tiktoken\n",
-      "Version: 0.6.0\n",
-      "Summary: tiktoken is a fast BPE tokeniser for use with OpenAI's models\n",
-      "Home-page: \n",
-      "Author: Shantanu Jain\n",
-      "Author-email: shantanu@openai.com\n",
-      "License: MIT License\n",
-      "        \n",
-      "        Copyright (c) 2022 OpenAI, Shantanu Jain\n",
-      "        \n",
-      "        Permission is hereby granted, free of charge, to any person obtaining a copy\n",
-      "        of this software and associated documentation files (the \"Software\"), to deal\n",
-      "        in the Software without restriction, including without limitation the rights\n",
-      "        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
-      "        copies of the Software, and to permit persons to whom the Software is\n",
-      "        furnished to do so, subject to the following conditions:\n",
-      "        \n",
-      "        The above copyright notice and this permission notice shall be included in all\n",
-      "        copies or substantial portions of the Software.\n",
-      "        \n",
-      "        THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
-      "        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
-      "        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
-      "        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
-      "        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
-      "        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
-      "        SOFTWARE.\n",
-      "        \n",
-      "Location: /home/aksha/.pyenv/versions/3.9.18/lib/python3.9/site-packages\n",
-      "Requires: regex, requests\n",
-      "Required-by: langchain-openai\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip show tiktoken "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: pydantic\n",
-      "Version: 1.9.0\n",
-      "Summary: Data validation and settings management using python 3.6 type hinting\n",
-      "Home-page: https://github.com/samuelcolvin/pydantic\n",
-      "Author: Samuel Colvin\n",
-      "Author-email: s@muelcolvin.com\n",
-      "License: MIT\n",
-      "Location: /home/aksha/.pyenv/versions/3.9.18/lib/python3.9/site-packages\n",
-      "Requires: typing-extensions\n",
-      "Required-by: autodoc-pydantic, chromadb, confection, fastapi, gto, inflect, langchain, langchain-core, langsmith, openai, pydantic-settings, replicate, spacy, thinc, weasel\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip show pydantic"
    ]
   },
   {
@@ -246,9 +90,9 @@
    "outputs": [],
    "source": [
     "def tag_abstract(abstract, materials, conditions, processes):\n",
-    "    words = re.findall(r'\\w+|[^\\w\\s]', abstract)\n",
+    "    words = re.findall(r\"\\w+|[^\\w\\s]\", abstract)\n",
     "\n",
-    "    tags = ['O'] * len(words)\n",
+    "    tags = [\"O\"] * len(words)\n",
     "\n",
     "    def tag_words(word_list, tag_suffix):\n",
     "        for word in word_list:\n",
@@ -257,20 +101,24 @@
     "                found_at = abstract.find(word, start)\n",
     "                if found_at == -1:\n",
     "                    break\n",
-    "                token_index = len(re.findall(\n",
-    "                    r'\\w+|[^\\w\\s]', abstract[:found_at]))\n",
+    "                token_index = len(re.findall(r\"\\w+|[^\\w\\s]\", abstract[:found_at]))\n",
     "                if token_index < len(tags):\n",
-    "                    tags[token_index] = 'B' + tag_suffix\n",
-    "                    for i in range(token_index + 1, min(token_index + len(re.findall(r'\\w+|[^\\w\\s]', word)), len(tags))):\n",
-    "                        tags[i] = 'I' + tag_suffix\n",
+    "                    tags[token_index] = \"B\" + tag_suffix\n",
+    "                    for i in range(\n",
+    "                        token_index + 1,\n",
+    "                        min(\n",
+    "                            token_index + len(re.findall(r\"\\w+|[^\\w\\s]\", word)),\n",
+    "                            len(tags),\n",
+    "                        ),\n",
+    "                    ):\n",
+    "                        tags[i] = \"I\" + tag_suffix\n",
     "                start = found_at + 1\n",
     "\n",
-    "    tag_words(materials, '-MATERIALS')\n",
-    "    tag_words(conditions, '-CONDITIONS')\n",
-    "    tag_words(processes, '-PROCESSES')\n",
+    "    tag_words(materials, \"-MATERIALS\")\n",
+    "    tag_words(conditions, \"-CONDITIONS\")\n",
+    "    tag_words(processes, \"-PROCESSES\")\n",
     "\n",
-    "    tagged_abstract = '\\n'.join(\n",
-    "        [f'{word} {tag}' for word, tag in zip(words, tags)])\n",
+    "    tagged_abstract = \"\\n\".join([f\"{word} {tag}\" for word, tag in zip(words, tags)])\n",
     "\n",
     "    return tagged_abstract"
    ]
@@ -290,11 +138,17 @@
    "source": [
     "class Annotations(BaseModel):\n",
     "    materials: List[str] = Field(\n",
-    "        ..., description=\"Only nouns that count as materials in experiments (such as types of chromatography, purification, methods, preparation, study, etc)\")\n",
+    "        ...,\n",
+    "        description=\"Only nouns that count as materials in experiments (such as types of chromatography, purification, methods, preparation, study, etc)\",\n",
+    "    )\n",
     "    conditions: List[str] = Field(\n",
-    "        ..., description=\"Conditions used within the experiments (like temperature units, quantity units, mathematical units, percentages, coefficients, any numbers)\")\n",
+    "        ...,\n",
+    "        description=\"Conditions used within the experiments (like temperature units, quantity units, mathematical units, percentages, coefficients, any numbers)\",\n",
+    "    )\n",
     "    processes: List[str] = Field(\n",
-    "        ..., description=\"Only nouns and verbs for processes within the experiments (like factor names, rate, yield, etc)\")"
+    "        ...,\n",
+    "        description=\"Only nouns and verbs for processes within the experiments (like factor names, rate, yield, etc)\",\n",
+    "    )"
    ]
   },
   {
@@ -304,10 +158,14 @@
    "outputs": [],
    "source": [
     "SampleAnnotations = Annotations(\n",
-    "    materials=['silica resin'],\n",
-    "    conditions=['10µm, 20µm, 50µm',  'only 10µm silica resin',\n",
-    "                'yield (>96%)', 'productivity (> 1kg/kg-resin/day)'],\n",
-    "    processes=['chiral separation']\n",
+    "    materials=[\"silica resin\"],\n",
+    "    conditions=[\n",
+    "        \"10µm, 20µm, 50µm\",\n",
+    "        \"only 10µm silica resin\",\n",
+    "        \"yield (>96%)\",\n",
+    "        \"productivity (> 1kg/kg-resin/day)\",\n",
+    "    ],\n",
+    "    processes=[\"chiral separation\"],\n",
     ")"
    ]
   },
@@ -331,9 +189,7 @@
     "I want you to look at the abstract given below and return all the key phrases you find. Every str object within the list you return for each of the tags must contain at least 2 words and not exceed 8 words. \n",
     "\"\"\"\n",
     ")\n",
-    "prompt.add_section(\n",
-    "    define_grammar=True\n",
-    ")\n",
+    "prompt.add_section(define_grammar=True)\n",
     "prompt.add_section(\n",
     "    text=\"\"\"\n",
     "Here is an example: \n",
@@ -342,11 +198,11 @@
     "Annotations: \n",
     "{sample} \n",
     "\"\"\",\n",
-    "    placeholders=[\"sample\"]\n",
+    "    placeholders=[\"sample\"],\n",
     ")\n",
     "prompt.add_section(\n",
     "    text=\"Remember that your role is to automate the data annotation process for a chemistry based project. Begin!\\nAbstract: {abstract}\\nAnnotations:\",\n",
-    "    placeholders=[\"abstract\"]\n",
+    "    placeholders=[\"abstract\"],\n",
     ")"
    ]
   },
@@ -381,17 +237,13 @@
    "outputs": [],
    "source": [
     "with Constrain(prompt) as manager:\n",
-    "    manager.set_config(\n",
-    "        format='xml'\n",
-    "    )\n",
+    "    manager.set_config(format=\"xml\")\n",
     "\n",
-    "    manager.format_prompt(placeholders={\n",
-    "                          \"abstract\": abstract,\n",
-    "                          \"sample\": XML.format(SampleAnnotations)\n",
-    "                          },\n",
-    "                          grammars=[{\n",
-    "                              'model': [Annotations]},\n",
-    "    ]\n",
+    "    manager.format_prompt(\n",
+    "        placeholders={\"abstract\": abstract, \"sample\": XML.format(SampleAnnotations)},\n",
+    "        grammars=[\n",
+    "            {\"model\": [Annotations]},\n",
+    "        ],\n",
     "    )\n",
     "\n",
     "    llm_response = llm(manager.prompt)\n",
