Major Changes for 1.0.0
Signed-off-by: AkshathRaghav <akshathraghav.r@gmail.com>

--- a/samples/bert_finetuning/annotator.ipynb
+++ b/samples/bert_finetuning/annotator.ipynb
@@ -67,10 +67,6 @@
     "            api_key=os.environ[\"OPENAI_API_KEY\"],\n",
     "        )\n",
     "\n",
-    "    def invoke(self, config: dict):\n",
-    "        with PromptContextManager(config) as filled_prompt:\n",
-    "            return self.request(filled_prompt, temperature=0.01)\n",
-    "\n",
     "    def __call__(self, prompt, temperature=0.2, context=None):\n",
     "        response = self.client.chat.completions.create(\n",
     "            model=\"gpt-3.5-turbo\",\n",
@@ -236,17 +232,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with Constrain(prompt) as manager:\n",
-    "    manager.set_config(format=\"xml\")\n",
-    "\n",
-    "    manager.format_prompt(\n",
+    "with Constrain('xml') as manager:\n",
+    "    prompt = manager.format(prompt, \n",
     "        placeholders={\"abstract\": abstract, \"sample\": XML.format(SampleAnnotations)},\n",
-    "        grammars=[\n",
-    "            {\"model\": [Annotations]},\n",
-    "        ],\n",
+    "        grammars=[{\"model\": [Annotations]}]\n",
     "    )\n",
     "\n",
-    "    llm_response = llm(manager.prompt)\n",
+    "    llm_response = llm(prompt)\n",
     "    response = manager.parse(llm_response)"
    ]
   },
