Minor Changes for 0.1.0
Signed-off-by: AkshathRaghav <akshathraghav.r@gmail.com>

--- a/guide.ipynb
+++ b/guide.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -15,7 +15,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -24,7 +24,7 @@
               "True"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -106,7 +106,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -506,13 +506,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "\n",
             "```\n",
             "{\n",
             "\"Project\": {\n",
@@ -606,7 +607,8 @@
             "{'Project': {'name': 'Multimodal Document Understanding Project', 'description': 'This project aims to develop a system that can understand and analyze documents using multiple modes of input such as text, images, and audio.', 'project_url': 'https://www.multimodalproject.com', 'team_members': {'TeamMember': [{'name': 'John Doe', 'role': 'Project Manager'}, {'name': 'Jane Smith', 'role': 'Lead Developer'}, {'name': 'Michael Johnson', 'role': 'Data Scientist'}]}, 'task': {'title': 'Data Collection and Preprocessing', 'description': 'Collect and preprocess text, image, and audio data for training the multimodal document understanding system.', 'assigned_to': 'Michael Johnson', 'due_date': typing.List[ForwardRef('2022-10-15')]}}}\n",
             "-------------\n",
             "{'before': 69, 'after': 252, 'factor': '2.7x'}\n",
-            "-------------\n"
+            "-------------\n",
+            "\n"
           ]
         }
       ],
@@ -651,6 +653,26 @@
         "        log(response)\n",
         "\n",
         "        log(manager.inflation_rate())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 51,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "typing.List[ForwardRef('2022-10-15')]"
+            ]
+          },
+          "execution_count": 51,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "response.Project.task.due_date"
       ]
     },
     {
